--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td><img src="images/Umesh.png" alt="umesh profile picture" height="200" width="200"></td>
         <td><h1>Umesh Chimankar</h1>
         <p><strong>Project Associate </strong><a>At Centre for Development of Advanced Computing Research & Development Hyderabad</a>.</p>
-        <p>I am an Frontend As Well As Backend Developer. I ❤️ coffee.</p></td>
+        <p>I am an Full Stack Developer. I ❤️ coffee.</p></td>
       </tr>
     </table>
     <hr>
