--- a/contact-me.html
+++ b/contact-me.html
@@ -7,6 +7,7 @@
   <body>
     <h1>My Contact Details</h1>
     <p>Umesh Chimankar</p>
+    <p>umeshchimankar21@gmail.com</p>
     <hr>
   </body>
 </html>
